# shred-project-helper

./: .gitignore  README.md  pyproject.toml  scratch  sph.py
sph/: check.py  (+17 more)
tests/test-projects/project1/: CMakeLists.txt
tests/test-projects/project1/.github/workflows/: develop-build_test_deployrecipe.yml  main-prepare_release.yml  reusable-main_build.yml  topics-build_test.yml
tests/test-projects/project1/build_ws/Debug/: Makefile  cmake_install.cmake  conan_paths.cmake  conan_toolchain.cmake  conanbuildinfo.txt  conaninfo.txt  conanuser_config.cmake  graph_info.json  libbacktrace-config.cmake  project2-config-version.cmake  project2-config.cmake  project2Target-debug.cmake  project2Targets.cmake  project3-config.cmake  project3Target-debug.cmake  project3Targets.cmake
tests/test-projects/project1/build_ws/Debug/src/: Makefile  cmake_install.cmake
tests/test-projects/project1/conan/: conanfile.py
tests/test-projects/project1/src/: CMakeLists.txt
tests/test-projects/project1/src/app/project1/: CMakeLists.txt  main.cpp
tests/test-projects/project2/: .gitmodules  CMakeLists.txt
tests/test-projects/project2/.github/workflows/: build-test-deploy.yml  reusable-main_build.yml
tests/test-projects/project2/build_ws/Debug/: BZip2Target-debug.cmake  BoostConfigVersion.cmake  BoostTarget-debug.cmake  BoostTargets.cmake  Makefile  ZLIBConfig.cmake  ZLIBConfigVersion.cmake  cmake_install.cmake  conan_paths.cmake  conan_toolchain.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json  libbacktraceTarget-debug.cmake  project3-config-version.cmake
tests/test-projects/project2/build_ws/Debug/project2/: project2Config.cmake  project2FindUpstream.cmake  project2Targets.cmake
tests/test-projects/project2/conan/: conanfile.py
tests/test-projects/project2/src/: CMakeLists.txt
tests/test-projects/project3/: .gitignore  CMakeLists.txt
tests/test-projects/project3/.github/workflows/: build-test-deploy.yml  develop-build_test_deployrecipe.yml  main-prepare_release.yml  topics-build_test.yml
tests/test-projects/project3/build_ws/Debug/: Makefile  Project3Config.cmake  ZLIBTarget-debug.cmake  cmake_install.cmake  conan_paths.cmake  conan_toolchain.cmake  conanbuildinfo.txt  conaninfo.txt  conanuser_config.cmake  graph_info.json
tests/test-projects/project3/build_ws/Release/: BZip2Config.cmake  BZip2Target-release.cmake  BoostConfig.cmake  BoostTarget-release.cmake  BoostTargets.cmake  ZLIBTarget-release.cmake  conan_paths.cmake  libbacktraceTarget-release.cmake
tests/test-projects/project3/conan/: conanfile.py
tests/test-projects/project3/src/: CMakeLists.txt
(+32 files in other folders)
